# FerricCP

./: ARCHITECTURE.md  Cargo.toml  README.md  test.cpp
rules/cpp/: ban_endl.yaml  ban_goto.yaml  bitwise_precedence.yaml  pow.yaml  range_copy.yaml  vector_bool.yaml
rules/python/: mutable_argument.yaml
src/: analyzer.rs  config.rs  diagnostics.rs  dispatcher.rs  lsp.rs  main.rs  rules.rs  source_table.rs  symbol_table.rs
src/semantics/: cpp.rs  mod.rs
test/: test.cpp  test.py
