[package]
name = "ferric_cp"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
tree-sitter = "0.26.10"
tree-sitter-cpp = "0.23.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.150"
tree-sitter-python = "0.25.0"
tower-lsp = "0.20.0"
tokio = { version = "1.32", features = ["full"] }